--- a/acerca.html
+++ b/acerca.html
@@ -199,7 +199,7 @@
 
         <section>
             <div class="container">
-                <img id="directivos" src="img/nosotros/directivos.jpg" alt="" class="img-fluid">
+                <!-- <img id="directivos" src="img/nosotros/directivos.jpg" alt="" class="img-fluid"> -->
 
                 <div class="row mt-5">
                     <div class="col">
