--- a/turismo.html
+++ b/turismo.html
@@ -100,16 +100,23 @@
                 <div class="col text-center" id="contenido_turismo1">
                     <img src="img/turismo/LOS ABALOS.jpg" alt="" class="img-fluid mb-3">
                     <div class="row">
-                        <div class="col">
+                        <div class="col tarjeta1">
                             <div class="galery_container row d-flex justify-content-center">
 
-                                <img src="img/turismo/los sabalos/WP_20140521_001.jpg" alt="" srcset="" class="img_adaptada lazy">
-                                <img src="img/turismo/los sabalos/WP_20140521_002.jpg" alt="" srcset="" class="img_adaptada lazy">
-                                <img src="img/turismo/los sabalos/WP_20140521_003.jpg" alt="" srcset="" class="img_adaptada lazy">
-                                <img src="img/turismo/los sabalos/WP_20140521_004.jpg" alt="" srcset="" class="img_adaptada lazy">
-
                                 <section data-featherlight-gallery data-featherlight-filter="a">
-                                    <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                                    <a href="img/turismo/los sabalos/WP_20140521_001.jpg"><img class="img_adaptada lazy"
+                                            src="img/turismo/los sabalos/WP_20140521_001.jpg"></a>
+                                    <a href="img/turismo/los sabalos/WP_20140521_002.jpg"><img class="img_adaptada lazy"
+                                            src="img/turismo/los sabalos/WP_20140521_002.jpg"></a>
+                                    <a href="img/turismo/los sabalos/WP_20140521_003.jpg"><img class="img_adaptada lazy"
+                                            src="img/turismo/los sabalos/WP_20140521_003.jpg"></a>
+                                    <a href="img/turismo/los sabalos/WP_20140521_004.jpg"><img class="img_adaptada lazy"
+                                            src="img/turismo/los sabalos/WP_20140521_004.jpg"></a>
+                                    <a href="img/turismo/los sabalos/WP_20140521_005.jpg"><img class="img_adaptada lazy"
+                                            src="img/turismo/los sabalos/WP_20140521_005.jpg"></a>
+                                    <a href="img/turismo/los sabalos/WP_20140521_006.jpg"><img class="img_adaptada lazy"
+                                            src="img/turismo/los sabalos/WP_20140521_006.jpg"></a>
+
                                 </section>
 
                             </div>
@@ -122,15 +129,16 @@
             <div class="col text-center" id="contenido_turismo2">
                 <img src="img/turismo/LA VENTIADORA.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/cascada la ventiadora/IMG-20180906-WA0018.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/cascada la ventiadora/IMG-20180926-WA0062.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/cascada la ventiadora/IMG-20180926-WA0118.jpg" alt="" srcset="" class="img_adaptada lazy">
-
                             <section data-featherlight-gallery data-featherlight-filter="a">
-                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                                <a href="img/turismo/cascada la ventiadora/IMG-20180906-WA0018.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/cascada la ventiadora/IMG-20180906-WA0018.jpg"></a>
+                                <a href="img/turismo/cascada la ventiadora/IMG-20180926-WA0062.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/cascada la ventiadora/IMG-20180926-WA0062.jpg"></a>
+                                <a href="img/turismo/cascada la ventiadora/IMG-20180926-WA0118.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/cascada la ventiadora/IMG-20180926-WA0118.jpg"></a>
                             </section>
 
                         </div>
@@ -142,16 +150,39 @@
             <div class="col text-center" id="contenido_turismo3">
                 <img src="img/turismo/OSCURO.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/charco oscuro/IMG_20180916_152230.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/charco oscuro/WP_20140521_044.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/charco oscuro/WP_20140521_043.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/charco oscuro/WP_20181012_027.jpg" alt="" srcset="" class="img_adaptada lazy">
-
                             <section data-featherlight-gallery data-featherlight-filter="a">
-                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                                <a href="img/turismo/charco oscuro/IMG_20180916_152230.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/IMG_20180916_152230.jpg"></a>
+                                <a href="img/turismo/charco oscuro/IMG_20180916_152631.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/IMG_20180916_152631.jpg"></a>
+                                <a href="img/turismo/charco oscuro/IMG_20180916_152638.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/IMG_20180916_152638.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20140521_043.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20140521_043.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20140521_044.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20140521_044.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20140521_045.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20140521_045.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20140521_047.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20140521_047.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20140521_048.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20140521_048.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20140521_049.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20140521_049.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20181012_027.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20181012_027.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20181012_028.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20181012_028.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20181012_029.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20181012_029.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20181012_031.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20181012_031.jpg"></a>
+                                <a href="img/turismo/charco oscuro/WP_20181012_033.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/charco oscuro/WP_20181012_033.jpg"></a>
+
                             </section>
 
                         </div>
@@ -163,16 +194,47 @@
             <div class="col text-center" id="contenido_turismo4">
                 <img src="img/turismo/CONFERENCIA.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/la conferencia/WP_20140521_008.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la conferencia/WP_20140521_028.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la conferencia/WP_20140521_014.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la conferencia/DSC01306.JPG" alt="" srcset="" class="img_adaptada lazy">
-
                             <section data-featherlight-gallery data-featherlight-filter="a">
-                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                                <a href="img/turismo/la conferencia/DSC01306.JPG"><img class="img_adaptada lazy" src="img/turismo/la conferencia/DSC01306.JPG"></a>
+                                <a href="img/turismo/la conferencia/DSC01317.JPG"><img class="img_adaptada lazy" src="img/turismo/la conferencia/DSC01317.JPG"></a>
+                                <a href="img/turismo/la conferencia/DSC01320.JPG"><img class="img_adaptada lazy" src="img/turismo/la conferencia/DSC01320.JPG"></a>
+                                <a href="img/turismo/la conferencia/IMG-20181117-WA0027.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/IMG-20181117-WA0027.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_008.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_008.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_009.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_009.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_010.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_010.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_011.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_011.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_012.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_012.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_013.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_013.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_014.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_014.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_015.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_015.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_016.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_016.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_018.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_018.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_019.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_019.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_021.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_021.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_025.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_025.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_026.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_026.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_027.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_027.jpg"></a>
+                                <a href="img/turismo/la conferencia/WP_20140521_028.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la conferencia/WP_20140521_028.jpg"></a>
                             </section>
 
                         </div>
@@ -184,16 +246,19 @@
             <div class="col text-center" id="contenido_turismo5">
                 <img src="img/turismo/PLATINA.jpg" alt="" class="img-fluid mb-3">
                 <div class="row">
-                    <div class="col">
+                    <div class="col tarjeta1">
                         <div class="galery_container row d-flex justify-content-center">
 
-                            <img src="img/turismo/la platina/WP_20181118_016.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la platina/WP_20181118_018.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la platina/WP_20181118_020.jpg" alt="" srcset="" class="img_adaptada lazy">
-                            <img src="img/turismo/la platina/WP_20181118_021.jpg" alt="" srcset="" class="img_adaptada lazy">
 
                             <section data-featherlight-gallery data-featherlight-filter="a">
-                                <a href="img/turismo/"><img class="img_adaptada lazy" src="img/turismo/"></a>
+                                <a href="img/turismo/la platina/WP_20181118_016.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_016.jpg"></a>
+                                <a href="img/turismo/la platina/WP_20181118_017.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_017.jpg"></a>
+                                <a href="img/turismo/la platina/WP_20181118_018.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_018.jpg"></a>
+                                <a href="img/turismo/la platina/WP_20181118_019.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_019.jpg"></a>
+                                <a href="img/turismo/la platina/WP_20181118_020.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_020.jpg"></a>
+                                <a href="img/turismo/la platina/WP_20181118_021.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_021.jpg"></a>
+                                <a href="img/turismo/la platina/WP_20181118_022.jpg"><img class="img_adaptada lazy" src="img/turismo/la platina/WP_20181118_022.jpg"></a>
+
                             </section>
 
                         </div>
@@ -209,10 +274,14 @@
                         <div class="galery_container row d-flex justify-content-center">
 
                             <section data-featherlight-gallery data-featherlight-filter="a">
-                                <a href="img/turismo/la tortuga/IMG_20180916_154728.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_154728.jpg"></a>
-                                <a href="img/turismo/la tortuga/IMG_20180916_154849.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_154849.jpg"></a>
-                                <a href="img/turismo/la tortuga/IMG_20180916_154930.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_154930.jpg"></a>
-                                <a href="img/turismo/la tortuga/IMG_20180916_155025.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/IMG_20180916_155025.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_154728.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la tortuga/IMG_20180916_154728.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_154849.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la tortuga/IMG_20180916_154849.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_154930.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la tortuga/IMG_20180916_154930.jpg"></a>
+                                <a href="img/turismo/la tortuga/IMG_20180916_155025.jpg"><img class="img_adaptada lazy"
+                                        src="img/turismo/la tortuga/IMG_20180916_155025.jpg"></a>
                                 <a href="img/turismo/la tortuga/WP_20140521_029.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_029.jpg"></a>
                                 <a href="img/turismo/la tortuga/WP_20140521_030.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_030.jpg"></a>
                                 <a href="img/turismo/la tortuga/WP_20140521_031.jpg"><img class="img_adaptada lazy" src="img/turismo/la tortuga/WP_20140521_031.jpg"></a>
