--- a/acerca.html
+++ b/acerca.html
@@ -86,7 +86,7 @@
             <div id="quienes" class="d-flex align-items-center justify-content-center">
                 <div class="col-sm-10 col-lg-8" data-aos="zoom-in">
                     <p class="title text-center">¿Quiénes somos?</p>
-                    <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
+                    <p class="text-justify">Una organización sin ánimo de lucro, de interés social,
                         perteneciente al
                         sector
                         de la economía
@@ -207,7 +207,7 @@
 
                             <figure class="figure text-center">
                                 <img src="img/nosotros/albeiro.jpg" alt="" srcset="" class="img_adaptada2 lazy">
-                                <figcaption class="figure-caption">Albeiro</figcaption>
+                                <figcaption class="figure-caption">Albeiro Caicedo Hurtado</figcaption>
                             </figure>
                             <figure class="figure text-center">
                                 <img src="img/nosotros/n1.jpg" alt="" srcset="" class="img_adaptada2 lazy">
@@ -231,6 +231,23 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+        <hr>
+        <section>
+            <div class="container text-dark">
+                <div class="row">
+                    <div class="col">
+                        <h4 class="title text-center text-uppercase">Sección de educación/recuperación del patrimonio
+                            cultural, valores, ciudadanía y apropiación territorial</h4>
+
+                        <h5>¿Qué es una cooperativa, sus características y tipos de cooperativas?</h5>
+                        <p>La empresa asociativa sin ánimo de lucro, en la cual los trabajadores o los usuarios,
+                            según el caso, son simultáneamente los aportantes y los gestores de la empresa, creada con
+                            el objeto de producir o distribuir conjunta y eficientemente bienes o servicios para
+                            satisfacer las necesidades de sus asociados y de la comunidad en general.</p>
+                    </div>
+                </div>
             </div>
         </section>
 
